# simple-slice

./: CMakeLists.txt  README.md
src/: air_hockey_game.cpp
src/air_hockey_game/: README.md  air_hockey_game.cpp  air_hockey_game.hpp  air_hockey_game_main.cpp
src/apps/: README.md  README_2d_slicer.md  cube_sample.stl  slicer2d_main.cpp  slicer_main.cpp
src/geometry/: point.hpp  projections.hpp  utilities.hpp  vector.hpp
src/mesh/: geometry.hpp  reorient_triangles.cpp  reorient_triangles.hpp  stl_io.cpp  stl_io.hpp  triangle_mesh.cpp  triangle_mesh.hpp  void_detection.cpp  void_detection.hpp
src/polyline/: polyline.cpp  polyline.hpp
src/slicer/: mesh_slicer.hpp  perimeters.hpp  shapes.hpp  stl_reader.hpp  toolpath.hpp
test/: test_utilities.cpp
tests/: CMakeLists.txt  test_projections.cpp  test_vector.cpp
tests/air_hockey_game/: test_air_hockey_game.cpp
tests/geometry/: test_projections.cpp  test_utilities.cpp  test_vector.cpp
tests/mesh/: test_geometry.cpp  test_reorient_triangles.cpp  test_stl_io.cpp  test_triangle_mesh.cpp  test_void_detection.cpp
tests/polyline/: test_polyline.cpp
tests/slicer/: test_mesh_slicer.cpp  test_perimeters.cpp  test_shapes.cpp  test_slicer.cpp  test_stl_reader.cpp  test_toolpath.cpp
